# srv

./: _start.bat  execl255报错点这里.bat  va_x通用破解补丁v2.0.rar
make-test/: CMakeLists.txt  Makefile
server/: test.txt
server/lib/: .gitignore
server/lib/protoc_gen_lua/: pb.c
server/lib/tolua++/src/: tolua++.h  tolua_push.c
server/project/lualib/: lualib.sln
server/project/lualib/Debug/: lualib.lib  tolua++.lib
server/project/lualib/lualib/: lualib.vcxproj  lualib.vcxproj.filters
server/project/tolua++/: tolua++.vcxproj  tolua++.vcxproj.filters
server/project/tolua++/Debug/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  tolua++.vcxprojResolveAssemblyReference.cache  vc110.idb
server/server/: server.sdf
server/server/server/: main.cpp  server.sln  server.vcxproj
server/server/server/Debug/: lua5.1.lib  tolua++.lib
server/server/server/data/: gen_define.lua  gen_protocol.lua  to_client.bat  version_template.lua  双击我.bat  版本生成.bat  配置表规则.docx
server/server/server/ga/: ga.vcxproj  ga.vcxproj.filters  main.cpp
server/server/server/game/: game.vcxproj  main.cpp
server/server/server/game_script/: main.lua  premain.lua
server/server/server/gl/: gl.vcxproj  main.cpp
server/server/server/global_script/: main.lua  premain.lua  res_check.lua
server/server/server/login/: login.vcxproj
server/server/server/lua5.1/: .gitignore  ReadMe.txt  lua5.1.vcxproj  lua5.1.vcxproj.filters
server/server/server/protobuf/: MyMessage.pb.cc  build.bat  (+2 more)
提示文档/: 3d捕鱼服务器流程.txt  global开发步骤.txt  union.txt  平台库对接.txt
(+230 files in other folders)
